Update code new

--- a/frontend/src/app/components/Calculator.css
+++ b/frontend/src/app/components/Calculator.css
@@ -9,7 +9,7 @@
   margin: auto;
   padding: 0px 140px;
   margin-bottom: 150px;
-  background: linear-gradient(180deg, #e18de7 0%, #ffff 60%);
+  background: linear-gradient(180deg, #ffb350 , #e1ffea22 60%);
 }
 
 .bmi h1 {
