--- a/frontend/src/app/components/Item.css
+++ b/frontend/src/app/components/Item.css
@@ -1,25 +1,47 @@
-.item{
+.item {
     width: 350px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    /* Căn giữa nội dung */
+    text-align: center;
+    /* Căn giữa văn bản */
 }
-.item p{
+
+.item p {
     margin: 6px 0px;
 }
-.item-price{
+
+.item-price {
     display: flex;
     gap: 20px;
 }
-.item-price-new{
+
+.item-price-new {
     color: #374151;
     font-size: 18px;
     font-weight: 600;
 }
-.item-price-old{
+
+.item-price-old {
     color: #8c8c8c;
     font-size: 18px;
     font-weight: 500;
     text-decoration: line-through;
 }
-.item:hover{
+
+.item:hover {
     transform: scale(1.05);
     transition: 0.6s;
+}
+
+.item img {
+    width: 100%;
+    /* Đảm bảo hình ảnh chiếm toàn bộ chiều rộng */
+    height: 300px;
+    /* Thiết lập chiều cao cố định */
+    object-fit: cover;
+    /* Giữ tỷ lệ khung hình và cắt hình ảnh nếu cần */
+    border-radius: 10px;
+    /* Thêm bo góc nếu cần */
 }
